== org.nfunk.* =======================================================
Dec 19 njf - figured out documentation linking issues. Leaving docs as they were
             before Nov 1 (no frames, javadoc at /doc/javadoc)
             
Dec 10 rjm - nodeAccept method added to jep.EvaluationVisitor so that it
			 can be easier for sub classes to use visitor pattern.
			 
		   - Improved printing facilities for complex numbers.
		   
Nov  6 njf - Merged JEPTester and JEPTest into JEPTest, now in the JUnit framework

Nov  3 rjm - JEP.evaluate() method will throw an exception if this.hasErrors() is true.

Nov  1 njf - changed documentation to frames
           - added new FAQ item

Oct 23 njf - added source="1.2" to javac options in build.xml
             avoids compile time error with 1.5 compiler by ensuring
             1.2 source compatibility
       njf - fixed [ 1046349 ] bug in sum()
       njf - fixed [ 1051988 ] JEPTester falsely reports "No errors"
       njf - improved value comparison and error reporting in JEPTester
       njf - reformated Comparative.java, added comments

Oct 22 njf - added simple sum test to JEPTesterExpressions.txt

Oct  4 rjm - Changes the SpecialEvaluationI interface to include a SymbolTable parameter.
       rjm - Added rules to differentiate atan2 removed support for angle
       rjm - Doc update for GroupJep, improved consol and unit test or working with polynomials over the reals (Doubles).

---- 2.3.0 release (Oct 3, 2004) ------------------------------------
Oct  3 njf - created new features document for the core JEP and moved
             appropriate text from DJEP index.html there
       njf - changed "jar" and "dist" targets to create a separate djep
             jar without examples and test cases, then include both jars
             in a jep-djep-2.3.0.zip file
       njf - new jjdoc target in build.xml to generate grammar documentation
       njf - removed compile.bat and grammardoc.bat
